--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "~1.9.1",
+    "mysql2": "^3.2.0",
     "nodemon": "^2.0.22"
   }
 }
